# Copyright 2024 The ExSQL Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
[workspace]
members = [
    "exsql-core",
    "exsql-storage",
]

resolver = "2"

[workspace.package]
authors = ["The ExSQL Authors"]
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/exsql-io/exsql"
version = "0.1.0"
